--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.1.0"
+pytest = "^8.1.1"
 
 [build-system]
 requires = ["poetry-core"]
